<resources>
    <string name="app_name">Coffee Brew Guide</string>
    <string name="title_activity_brew_method">BrewMethodActivity</string>
    <string name="title_activity_chemex">Chemex</string>
    <string name="title_activity_aeropress">Aeropress</string>
    <string name="title_activity_hario_v60">Hario V-60</string>
    <string name="title_activity_french_press">French Press</string>
    <string name="title_activity_iced_coffee">Iced Coffee</string>
    <string name="hint_instructions_step_number">Step. 1</string>
    <string name="hint_instruction_step1_aeropress">Load filter over cover and screw onto bottom-half of brewer, set on top of a cup or carafe.</string>
    <string name="serving">serving</string>
    <string name="brew_time">Brew Time</string>
    <string name="grind_setting">Grind Setting</string>
    <string name="brew_method_description">Description</string>
    <string name="brew_method_instructions">Instructions</string>
    <string name="grind_size_fine">Fine</string>
    <string name="grind_size_medium">Medium</string>
    <string name="grind_size_coarse">Coarse</string>
    <string name="small_device">Serving size has been changed to 1 on this brew method due to the nature of the method</string>
    <string name="title_aeropress">Aeropress</string>
    <string name="bio_aeropress">
        The aero-press, designed by the inventor of the Aerobie Ring (a flying ring), is a great light-weight travel companion loved by many in the coffee world. It can be used with a paper or metal filter and combines emersion and pressure brewing resulting in a full-bodied and fragrent cup.
    </string>
    <string name="title_frenchpress">Frenchpress</string>
    <string name="bio_frenchpress">
        The french press is perhaps the easiest brew-method to achieve a good tasting cup of coffee. The method a full-emersion technique and filters through a metal screen. The method has the biggest body/mouth feel due to the high amount of sediment that passes through the screen; this also results in muted acidity and nuanced flavors.
    </string>
    <string name="title_harioV60">Hario V-60</string>
    <string name="bio_harioV60">
        The hario V-60 is capable of so much, but it is easy to mess up. When done right, the body is smooth and those bright acidic notes really shine through the cup. The V-60 is a pour-over drip with ridges on the walls of the vessel which allow for greater flow. Detail to your method of pouring is required and a gooseneck kettle is recommended.
    </string>
    <string name="title_chemex">Chemex</string>
    <string name="bio_chemex">Chemex is a design icon of the coffee world originally invented in 1941. The proprietary thick filter removes more oil and sediments from the coffee than any other brew method, leaving a smooth and acidic cup. Recommend using a gooseneck kettle for pouring water.</string>
    <string name="title_cold_brew">Cold Brew</string>
    <string name="bio_cold_brew">Cold brew coffee makes for a strong, full-bodied, iced coffee beverage. There are many different vessles to make cold brew in, this method can be used interchangeably on any of them.
</string>
    <string name="title_kalita_wave">Kalita Wave</string>
    <string name="bio_kalita_wave">The Kalita Wave is can produce an awesome balanced and sweet cup of coffee. Its flat bottom causes an even extraction pulls out sweetness and body in the cup. This guide reccomends a coarse grind, and uses agitation to slow the brew time down.</string>
    <string name="start_time">00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="imperial_system">Imperial (fluid ounces [not recommended])</string>
    <string name="metric_System">Metric (grams)</string>
    <string name="pref_serving_size_sum">The number of cups of coffee you\'d like to make: %s</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_recipe">Recipe</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_feedback">Feedback</string>
    <string name="accessibility_drawer_open">Open navigation drawer</string>
    <string name="accessibility_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_recipe">About the recipe</string>
    <string name="description_recipe">The recipes for all of these brew methods is based on a recipes that aim for a total dissolved solid (TDS) ratio of 1.38\-1.45. These recipes are great for a starting place but due to the variety in coffees and roasts, adjustments may be necessary.</string>
    <string name="accessability_image_description_recipe">Recipe chart showing extraction profile</string>
    <string name="accessability_image_description_feedback">Feedback illustration</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_donations">Donations</string>
    <string name="description_feedback">Got an idea to improve this app? Come across a bug I didn\'t find? Want to just talk about coffee or programming? Feel free to drop a line!</string>
    <string name="link_feedback">Send</string>
    <string name="description_donate">This app was written in my free time between being a student and working. There\'s no plan for a \"premium\" version of the app, but if you want, you can buy me coffee through the PayPal link below.</string>
    <string name="link_paypal">Donate with PayPal</string>
    <string name="edit_text_hint_name">Name</string>
    <string name="edit_text_hint_subject">Subject (Optional)</string>
    <string name="edit_text_hint_body">Body</string>
</resources>