<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="-32dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/accessability_image_description_feedback"
            android:maxHeight="20dp"
            android:src="@drawable/extraction" />

        <TextView
            android:id="@+id/recipe_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_recipe"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/recipe_description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/description_recipe" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>